# lidarA1Test

./: .gitignore  CMakeLists.txt  LICENCE
communication/: CMakeLists.txt
communication/protobuf/: CMakeLists.txt  LaserScan.proto  TestMsg.proto
communication/zmq/: CMakeLists.txt
communication/zmq/helper/: CMakeLists.txt
communication/zmq/helper/inc/: zmqHelper.hpp
communication/zmq/helper/src/: zmqHelper.cpp
communication/zmq/inc/: publisher.hpp  subscriber.hpp
communication/zmq/src/: publisher.cpp  subscriber.cpp
laptop/: Dockerfile  docker_create.sh
laptop/src/: CMakeLists.txt
laptop/src/protobufToRos/: CMakeLists.txt  package.xml
laptop/src/protobufToRos/config/: laser_scan.rviz
laptop/src/protobufToRos/inc/: protoToRos.hh
laptop/src/protobufToRos/launch/: lidar_visualisation.launch
laptop/src/protobufToRos/src/: main.cpp  protoToRos.cpp
laptop/src/src/: main.cpp  subscriber.cpp
protobuf/: CMakeLists.txt  pc2d.pb.cc  pc2d.pb.h  pc2d.proto
rpi/: Dockerfile  docker_create.sh
rpi/src/: CMakeLists.txt
rpi/src/application/: CMakeLists.txt
rpi/src/application/src/: main.cpp
rpi/src/communication/: CMakeLists.txt
rpi/src/rplidar/: CMakeLists.txt
rpi/src/rplidar/inc/: rplidar.hpp
rpi/src/rplidar/src/: rplidar.cpp
rpi/src/src/: publisher.cpp
