# generate files from proto
SET(PROTO_FILES
        pc2d
)
SET(PROTO_INPUT_PATH
        ${CMAKE_CURRENT_SOURCE_DIR}
)
SET(PROTO_OUTPUT_PATH
        ${CMAKE_CURRENT_SOURCE_DIR}
)
FOREACH(proto IN LISTS PROTO_FILES)
        EXECUTE_PROCESS(COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} -I${CMAKE_CURRENT_SOURCE_DIR} --cpp_out=${PROTO_OUTPUT_PATH} "${PROTO_INPUT_PATH}/${proto}.proto")
ENDFOREACH(proto)

SET(LIB_PROTO_FILES
        ${PROTO_FILES}
)

LIST(TRANSFORM LIB_PROTO_FILES PREPEND ${PROTO_OUTPUT_PATH})
LIST(TRANSFORM LIB_PROTO_FILES APPEND ".pb.cc")


add_library(protoMessages
        ${PROTO_OUTPUT_PATH}/${PROTO_FILES}.pb.cc
)

target_include_directories(protoMessages PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)